--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<header class="inner">
 			<a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
 			<h1 id="project_title">Afficheur LCD 2x16 I²C</h1>
-			<h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# pour une Netduino plus 2 ou une Netduino 3.</h2>
+			<h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino,
+				et FEZ (PANDA, COBRA...)</h2>
 			<section id="downloads">
 				<a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
 				<a class="tar_download_link" href="https://github.com/WebGE/LCDI2C/tarball/master">Download this project as a tar.gz file</a>
@@ -26,11 +27,30 @@
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
-			<hr/>
-			<h3>
-				<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Le
-				circuit intégré PCF2119 : LCD controllers/drivers</h3>
-			<hr/>
+			<hr>
+			<h4>Sommaire</h4>
+			<ol>
+				<li>LE MATERIEL
+					<ol>
+						<li>Le circuit intégré PCF2119 : LCD controllers/drivers</li>
+						<li><a href="#DUINO">Les cartes Netduino</a></li>
+						<li><a href="#FEZ">Les cartes FEZ</a> </li>
+					</ol>
+				</li>
+				<li><a href="#LOG">LE LOGICIEL</a>
+					<ol>
+						<li><a href="#REP">Contenu du répertoire proposé au téléchargement</a></li>
+						<li><a href="#NUGET">Le NuGet MicroToolsKit</a></li>
+						<li><a href="#WIKI">Les Wikis</a></li>
+						<li><a href="#DESC">Description et utilisation de la classe I2CLCD</a></li>
+					</ol>
+				</li>
+			</ol>
+			<hr>
+			<h3>1. LE MATERIEL</h3>
+			<hr>
+			<h4>1.1 Le circuit intégré PCF2119 : LCD controllers/drivers</h4>
+			<hr>
 			<ul>
 				<li><strong>Présentation</strong></li>
 				<p>Le PCF2119 est un circuit intégré destiné à la commande des matrices de points 5x8. Il est utilisé par les afficheurs
@@ -42,7 +62,7 @@
 				<li><strong>Distributeur</strong> : <a href="http://fr.farnell.com/midas/mc21605e6w-sptlyi/lcd-2x16-stn-led-b-l-vert-i2c-i/dp/2342652"
 						target="_blank">Farnell</a></li>
 			</ul>
-			<hr/>
+			<hr>
 			<h3>IHM SSI</h3>
 			<p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine <strong><a href="https://webge.github.io/IHMSSI/" target="_blank">SSI</a></strong>				se compose :</p>
 			<ul>
@@ -273,7 +293,8 @@
 	<!-- FOOTER  -->
 	<div id="footer_wrap" class="outer">
 		<footer class="inner">
-			<p class="copyright">Contrôler un afficheur LCD 2x16 I2C (PCF2119) by <a href="https://github.com/WebGE">WebGE</a></p>
+			<p class="copyright">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino,
+				et FEZ (PANDA, COBRA...) maintened by <a href="https://github.com/WebGE">WebGE</a></p>
 			<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
 		</footer>
 	</div>
