--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<header class="inner">
 			<a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
 			<h1 id="project_title">Afficheur LCD 2x16 I²C</h1>
-			<h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino,
-				et FEZ (PANDA, COBRA...)</h2>
+			<h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino, et
+				FEZ (PANDA, COBRA...)</h2>
 			<section id="downloads">
 				<a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
 				<a class="tar_download_link" href="https://github.com/WebGE/LCDI2C/tarball/master">Download this project as a tar.gz file</a>
@@ -33,6 +33,7 @@
 				<li>LE MATERIEL
 					<ol>
 						<li>Le circuit intégré PCF2119 : LCD controllers/drivers</li>
+						<li><a href="#SSI">Exemple d'utilisation du circuit PCF8574 : l'IHM SSI</a></li>
 						<li><a href="#DUINO">Les cartes Netduino</a></li>
 						<li><a href="#FEZ">Les cartes FEZ</a> </li>
 					</ol>
@@ -59,30 +60,68 @@
 				<li><strong>MIDAS - MC21605E6W-SPTLYI - LCD 2X16 STN LED B/L Y/VERT I2C I/F</strong></li>
 				<p align="center"><img src="http://fr.farnell.com/productimages/farnell/standard/2342652-40.jpg" /></p>
 				<li><strong>Documentation: </strong><a href="http://www.farnell.com/datasheets/1722538.pdf" target="_blank">pdf</a></li>
-				<li><strong>Distributeur</strong> : <a href="http://fr.farnell.com/midas/mc21605e6w-sptlyi/lcd-2x16-stn-led-b-l-vert-i2c-i/dp/2342652"
-						target="_blank">Farnell</a></li>
+				<li><strong>Distributeur</strong> :
+					<a href="http://fr.farnell.com/midas/mc21605e6w-sptlyi/lcd-2x16-stn-led-b-l-vert-i2c-i/dp/2342652"
+						target="_blank">Farnell</a>
+				</li>
 			</ul>
 			<hr>
-			<h3>IHM SSI</h3>
+
+			<h4 id="SSI">1.2 Exemple d'utilisation du circuit PCF8574 : l'IHM SSI</h4>
 			<p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine <strong><a href="https://webge.github.io/IHMSSI/" target="_blank">SSI</a></strong>				se compose :</p>
 			<ul>
 				<li>d'un afficheur I²C 2x16 (MIDAS ou BATRON) à PCF2119,</li>
 				<li>de huit leds et de huit boutons-poussoir connectés à deux <a href="https://webge.github.io/PCF8574/" target="_blank">PCF8574</a>.</li>
 			</ul>
 			<p align="center"><img src="images/IHMSISI.jpg" width="50%" height="50%"></p>
-			<hr/>
-			<h3>
-				<a name="carte-netduino-de-secret-labs" class="anchor" href="#carte-netduino-de-secret-labs" target="_blank"><span class="octicon octicon-link"></span></a>Les
-				cartes NetDuino</h3>
+			<hr>
+
+			<h4 id="DUINO">1.3 Les cartes Netduino</h4>
 			<h5>Secret Labs</h5>
-			<hr/>
+			<hr>
 			<ul>
 				<li><strong>Microcontrôleur</strong> : STM32F405RG 32 bits à architecture Cortex-M4 cadencé à 168 MHz.</li>
-				<li><strong>RAM</strong> : 100 KB (164+)*.</li>
-				<li><strong>Flash</strong> : 384 KB (1408KB)*.</li>
-				<li><strong>Port Ethernet : </strong> 10Mbps (Wifi:802.11b/g/n)*.</li>
+				<li><strong>RAM</strong> : 164KB+.</li>
+				<li><strong>Flash</strong> : 1408KB.</li>
+				<li><strong>Port Ethernet : </strong> 10/100Mbps (Wifi:802.11b/g/n)*.</li>
 				<li><strong>E/S numériques</strong> : 22</li>
 				<li><strong>Entrées analogiques</strong> : 6</li>
+				<li><strong>Stockage</strong>: carte µSD</li>
+				<li><strong>IDE</strong> : Microsoft Visual Studio</li>
+				<li><strong>Framework</strong> : .NETMF 4.3</li>
+				<li><strong>Langages de programmation</strong> : C#, VB</li>
+				<li><strong>Compatibilité</strong> : shield Arduino, Gadgeteer</li>
+			</ul>
+			<table>
+				<tr>
+					<td><img src="images/netduino3ethernet.png" alt="Netduino plus 2" target="_blank" /></td>
+					<td><img src="images/inputandoutput.png" alt="Netduino 3 wifi" target="_blank" /></td>
+				</tr>
+				<tr>
+					<td align="center"><strong>Netduino 3 Ethernet</strong></td>
+					<td align="center"><strong>Netduino 3 wifi*</strong></td>
+				</tr>
+			</table>
+			<ul>
+				<li><strong>Sites à consulter</strong> : <a href="http://netduino.com/netduinoplus2/specs.htm" target="_blank">Netduino</a>,
+					<a href="http://www.netmf.com/" target="_blank">NETMF</a></li>
+				<li><strong>Distributeurs</strong> : <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a></li>
+			</ul>
+			<hr>
+
+			<h4 id="FEZ">>1.4 Les cartes FEZ</h4>
+			<h5>GHI Electonics (Extrait)</h5>
+			<hr>
+			<ul>
+				<li><strong>Microcontrôleur</strong> : 180 MHz 32-bit ARM Cortex-M4.(120 MHz 32-bit ARM Cortex-M3 )*</li>
+				<li><strong>SoC(SoM)*</strong> : <a href="https://www.ghielectronics.com/catalog/product/501" target="_blank">G80</a>
+					<a href="https://www.ghielectronics.com/catalog/product/373" target="_blank">G120*</a>
+				</li>
+				<li><strong>RAM</strong> : 156 KB(2.87 MB)*.</li>
+				<li><strong>Flash</strong> : 256 KB (13.67 MB)*.</li>
+				<li><strong>E/S numériques</strong> : 53(60)*</li>
+				<li><strong>Entrées analogiques</strong> : 16(8)*</li>
+				<li><strong>Réseaux : </strong> Ethernet TCP/IP, WiFi, and SSL.</li>
 				<li><strong>Stockage</strong>: carte µSD</li>
 				<li><strong>IDE</strong> : Microsoft Visual Studio</li>
 				<li><strong>Framework</strong> : .NETMF 4.3</li>
@@ -91,50 +130,72 @@
 
 			<table>
 				<tr>
-					<td><img src="http://www.mouser.com/images/microsites/Netduino_Plus_2.jpg" alt="Netduino plus 2" /></td>
-					<td><img src="http://static.netduino.com/images/netduino3wifi/specs/inputandoutput.jpg" alt="Netduino 3 wifi" /></td>
+					<td><img src="images/panda3.png" alt="PANDA III" /></td>
+					<td><img src="images/cobra3.png" alt="COBRA III" /></td>
 				</tr>
 				<tr>
-					<td align="center"><strong>Netduino + 2</strong></td>
-					<td align="center"><strong>Netduino 3 wifi* (compatible Gadgeteer)</strong></td>
+					<td align="center"><strong>PANDA III</strong></td>
+					<td align="center"><strong>COBRA III* (compatible Gadgeteer)</strong></td>
 				</tr>
 			</table>
 
 			<ul>
-				<li><strong>Sites à consulter</strong> : <a href="http://netduino.com/netduinoplus2/specs.htm" target="_blank">Netduino</a>,
+				<li><strong>Sites à consulter</strong> : <a href="https://www.ghielectronics.com/" target="_blank">GHI ELECTRONICS</a>,
 					<a href="http://www.netmf.com/" target="_blank">NETMF</a></li>
-				<li><strong>Distributeurs</strong> : <a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a></li>
-			</ul>
-			<hr/>
-			<h3>Wiki</h3>
-			<ul>
-				<li><strong>Exemple pour la carte Netduino sur Wikispaces: <a href="https://csharpembarquenetduino.wikispaces.com/" target="_blank">lien</a></strong></li>
+				<li><strong>Distributeurs</strong> : <a href="http://www.mouser.fr" target="_blank">Mouser Electronics</a></li>
 			</ul>
 			<hr>
-			<h3>Contenu du répertoire proposé au téléchargement</h3>
-			<p> Le répertoire proposé au téléchargement (au format zip ou tar.gz) contient la solution <strong>NetduinoI2CLCD</strong> composée :
+
+			<h3 id="LOG">2. LE LOGICIEL</h3>
+			<hr>
+			<h4 id="REP">2.1 Contenu du répertoire proposé au téléchargement</h4>
+			<p> Le répertoire proposé au téléchargement (au format zip ou tar.gz) contient la solution <strong>NetduinoI2CLCD</strong>				composée :
 			</p>
 			<ul>
 				<li>Du projet <strong>I2CLCD </strong> : le <strong>code source</strong> de la classe <em>I2CLcd</em>.</li>
 				<li>Du projet <strong>TestI2CLCD </strong>: un exemple d'utilisation de cette classe.</li>
 			</ul>
-			<p><em>Remarques : La dernière version <strong>compilée</strong> de la classe <strong>I2CLcd</strong> se situe dans la bibliothèque <strong>MicroToolsKit</strong> disponible sur <a href="https://www.nuget.org/packages/WebGE.MicroToolsKit/" target="_blank">nuget.org</a>.</em></p>
+			<hr>
+			<h4 id="NUGET">2.2 Le NuGet MicroToolsKit</h4>
+			<p>La dernière version <strong>compilée</strong> de la classe <strong>I2CLcd</strong> se situe dans la bibliothèque <strong>MicroToolsKit</strong>				disponible sur <a href="https://www.nuget.org/packages/WebGE.MicroToolsKit/" target="_blank">nuget.org</a>.</em>
+			</p>
 			<p align="center"><img src="images/NuGet-large.png" /></p>
+			<p><strong>Organisation des classes</strong> contenues dans MicroToolsKit
+				<a href="https://csharpembarquenetduino.wikispaces.com/6.+La+biblioth%C3%A8que+MicroToolsKit"
+					target="_blank">[lien]</a>
+			</p>
 			<p><em>Installer cette bibliothèque dans le projet simplifie l'utilisation de cette classe.</em></p>
-			<hr/>
-			<h3>Description et utilisation de la classe I2CLCD</h3>
+			<hr>
+
+			<h4 id="WIKI">2.3 Les Wikis</h4>
+			<ul>
+				<li><strong>Fascicules</strong> d'exemples de code pour les cartes <strong>Netduino</strong>.
+					<a href="https://csharpembarquenetduino.wikispaces.com/5.+Les+fascicules+d%27exemples+cod%C3%A9s+en+CSharp"
+						target="_blank">[lien]</a>
+				</li>
+				<li><strong>Fascicule</strong> d'exemples de code pour les cartes <strong>FEZ</strong>.
+					<a href="https://csharpembarquefez.wikispaces.com/5.+Les+fascicules+d%27exemples+cod%C3%A9s+en+CSharp"
+						target="_blank">[lien]</a>
+				</li>
+			</ul>
+			<hr>
+
+			<h4 id="DESC">2.4 Description et utilisation de la classe PCF8574</h4>
 			<ul>
 				<li><strong>Rôle: </strong>Contrôler un afficheur à PCF2119 via un bus I²C.</li>
-				<li><strong>Assembly: </strong> <em>MicroToolsKit</em> (disponible sur <a href="https://www.nuget.org/packages/WebGE.MicroToolsKit/" target="_blank">nuget.org</a>)</li>
+				<li><strong>Assembly: </strong> <em>MicroToolsKit</em> (disponible sur
+					<a href="https://www.nuget.org/packages/WebGE.MicroToolsKit/"
+						target="_blank">nuget.org</a>)</li>
 				<li><strong>Espace de noms: </strong><em>Microtoolskit.Hardware.Displays</em></li>
 			</ul>
-			<hr/>
+			<hr>
 
 			<p><strong>Création d'un projet avec l'IDE Visual Studio</strong></p>
 			<ol>
-				<li><strong>Utiliser</strong> le gestionnaire de paquets NuGet pour <strong>ajouter</strong> l'assembly <strong>MicroToolsKit</strong> (disponible sur <a href="https://www.nuget.org/packages/WebGE.MicroToolsKit/" target="_blank">nuget.org</a>) dans le répertoire <em>Références</em>					du projet.(clic droit sur <em>Références</em> puis <em>Gérer les packages NuGet...</em>)</li>
-				<li><strong>Ajouter</strong> l'espace de noms <strong>Microtoolskit.Hardware.Displays </strong>dans
-					l'en-tête du fichier source.</li>
+				<li><strong>Utiliser</strong> le gestionnaire de paquets NuGet pour <strong>ajouter</strong> l'assembly <strong>MicroToolsKit</strong>					(disponible sur <a href="https://www.nuget.org/packages/WebGE.MicroToolsKit/" target="_blank">nuget.org</a>) dans le
+					répertoire <em>Références</em> du projet.(clic droit sur <em>Références</em> puis <em>Gérer les packages NuGet...</em>)</li>
+				<li><strong>Ajouter</strong> l'espace de noms <strong>Microtoolskit.Hardware.Displays </strong>dans l'en-tête du fichier
+					source.</li>
 				<li><strong>Créer</strong> un objet en utilisant un des constructeurs <em>I2CLcd</em>.</li>
 				<li><strong>Initialiser</strong> le LCD avec la méthode <em>Init</em>.</li>
 				<li><strong>Effacer l'écran</strong> avec la méthode <em>ClearScreen</em>.</li>
@@ -293,8 +354,8 @@
 	<!-- FOOTER  -->
 	<div id="footer_wrap" class="outer">
 		<footer class="inner">
-			<p class="copyright">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino,
-				et FEZ (PANDA, COBRA...) maintened by <a href="https://github.com/WebGE">WebGE</a></p>
+			<p class="copyright">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino, et
+				FEZ (PANDA, COBRA...) maintened by <a href="https://github.com/WebGE">WebGE</a></p>
 			<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
 		</footer>
 	</div>
