--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<li>LE MATERIEL
 					<ol>
 						<li>Le circuit intégré PCF2119 : LCD controllers/drivers</li>
-						<li><a href="#SSI">Exemple d'utilisation du circuit PCF8574 : l'IHM SSI</a></li>
+						<li><a href="#SSI">Exemple d'utilisation du circuit PCF2119 : l'IHM SSI</a></li>
 						<li><a href="#DUINO">Les cartes Netduino</a></li>
 						<li><a href="#FEZ">Les cartes FEZ</a> </li>
 					</ol>
@@ -43,7 +43,7 @@
 						<li><a href="#REP">Contenu du répertoire proposé au téléchargement</a></li>
 						<li><a href="#NUGET">Le NuGet MicroToolsKit</a></li>
 						<li><a href="#WIKI">Les Wikis</a></li>
-						<li><a href="#DESC">Description et utilisation de la classe I2CLCD</a></li>
+						<li><a href="#DESC">Description et utilisation de la classe I2CLcd</a></li>
 					</ol>
 				</li>
 			</ol>
@@ -67,7 +67,7 @@
 			</ul>
 			<hr>
 
-			<h4 id="SSI">1.2 Exemple d'utilisation du circuit PCF8574 : l'IHM SSI</h4>
+			<h4 id="SSI">1.2 Exemple d'utilisation du circuit PCF2119 : l'IHM SSI</h4>
 			<p>L'<strong>I</strong>nterface <strong>H</strong>omme <strong>M</strong>achine <strong><a href="https://webge.github.io/IHMSSI/" target="_blank">SSI</a></strong>				se compose :</p>
 			<ul>
 				<li>d'un afficheur I²C 2x16 (MIDAS ou BATRON) à PCF2119,</li>
@@ -109,7 +109,7 @@
 			</ul>
 			<hr>
 
-			<h4 id="FEZ">>1.4 Les cartes FEZ</h4>
+			<h4 id="FEZ">1.4 Les cartes FEZ</h4>
 			<h5>GHI Electonics (Extrait)</h5>
 			<hr>
 			<ul>
@@ -180,7 +180,7 @@
 			</ul>
 			<hr>
 
-			<h4 id="DESC">2.4 Description et utilisation de la classe PCF8574</h4>
+			<h4 id="DESC">2.4 Description et utilisation de la classe I2CLcd</h4>
 			<ul>
 				<li><strong>Rôle: </strong>Contrôler un afficheur à PCF2119 via un bus I²C.</li>
 				<li><strong>Assembly: </strong> <em>MicroToolsKit</em> (disponible sur
