--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="inner">
 			<a id="forkme_banner" href="https://github.com/WebGE/LCDI2C">View on GitHub</a>
 			<h1 id="project_title">Afficheur LCD 2x16 I²C</h1>
-			<h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino, et
+			<h2 id="project_tagline">Description de la classe <strong><em>I2CLcd</em></strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino et
 				FEZ (PANDA, COBRA...)</h2>
 			<section id="downloads">
 				<a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
