--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
 					<strong>Distributeurs</strong> :
 					<a href="http://www.mouser.fr/Search/Refine.aspx?Keyword=netduino" target="_blank">Mouser Electronics</a>
 				</li>
+				<li>
+					<strong>Schémas</strong> :
+					<a href="http://p.mariano.free.fr/doc/wikis/pdf/Hardware/Panda3/FEZ_Panda_III_SCH.zip">Panda III</a>,
+					<a href="http://p.mariano.free.fr/doc/wikis/pdf/Hardware/Cobra3/FEZ_Cobra_III_SCH.zip">Cobra III</a>
+				</li>
 			</ul>
 			<hr>
 
