--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 				</strong> développée en C# sous .NETMF 4.3 pour les cartes Netduino et FEZ (PANDA, COBRA...)</h2>
 			<section id="downloads">
 				<a class="zip_download_link" href="https://github.com/WebGE/LCDI2C/zipball/master">Download this project as a .zip file</a>
-				<a class="tar_download_link" href="https://github.com/WebGE/LCDI2C/tarball/master">Download this project as a tar.gz file</a>
+				<a class="tar_download_link" href="https://github.com/WebGE/LCDI2C/tarball/master">Download this project as a tar.gz
+					file
+				</a>
 			</section>
 		</header>
 	</div>
@@ -63,16 +65,20 @@
 						</li>
 					</ol>
 				</li>
-				<li>LES FASCICULES
+				<li>LIENS
 					<ol>
 						<li>
-							<a href="http://webge.dyndns-server.com/dokuwiki/doku.php?id=netmf43:accueilnetmf" target="_blank">Exemples codés en C# pour les cartes Netduino et Fez (Panda 3, BrainPad)</a>
+							<a href="http://webge.dyndns-server.com/dokuwiki/doku.php?id=netmf43:accueilnetmf" target="_blank">Exemples codés
+								en C# pour les cartes Netduino et Fez (Panda 3, BrainPad)</a>
+						</li>
+						<li>
+							<a href="http://webge.dyndns-server.com/dokuwiki/doku.php?id=netmf43:6_microtoolskit" target="_blank">La page du projet
+								MicroToolsKit
+							</a>
 						</li>
 					</ol>
 				</li>
-				<li>
-					<a href="http://webge.dyndns-server.com/dokuwiki/doku.php?id=netmf43:6_microtoolskit" target="_blank">La page du projet MicroToolsKit</a>
-				</li>
+
 			</ol>
 			<hr>
 			<h3>1. LE MATERIEL</h3>
@@ -250,7 +256,7 @@
 			<hr>
 			<h4 id="REP">2.1 Contenu du répertoire proposé au téléchargement</h4>
 			<p> Le répertoire proposé au téléchargement (au format zip ou tar.gz) contient la solution
-				<strong>NetduinoI2CLCD</strong> composée :
+				<strong>I2CLCD</strong> composée :
 			</p>
 			<ul>
 				<li>Du projet
@@ -258,7 +264,9 @@
 					<strong>code source</strong> de la classe
 					<em>I2CLcd</em>.</li>
 				<li>Du projet
-					<strong>TestI2CLCD </strong>: un exemple d'utilisation de cette classe.</li>
+					<strong>Netduino</strong>: un exemple d'utilisation de cette classe avec une carte Netduino2 plus.</li>
+				<li>Du projet
+					<strong>FEZPANDA</strong>: un exemple d'utilisation de cette classe avec une carte PANDA III.</li>
 			</ul>
 			<hr>
 			<h4 id="NUGET">2.2 Le NuGet MicroToolsKit</h4>
@@ -316,7 +324,7 @@
 			<ol>
 				<li>
 					<strong>Créer </strong>un nouveau projet en suivant la démarche décrite dans le chapitre
-					<em>"Premier programme en C# étape par étape"</em> avec à une carte
+					<em>"Premier programme en C# étape par étape"</em> avec une carte
 					<strong>Netduino</strong> ou avec une carte
 					<strong>Fez (Panda 3, BrainPad, etc.)</strong>.
 					<a href=" http://webge.dyndns-server.com/dokuwiki/doku.php?id=netmf43:accueilnetmf " target="_blank">[lien]</a>
@@ -410,7 +418,8 @@ namespace FezPanda
 						<strong>I2CLcd</strong>()</td>
 					<td>Instancie un objet "I2CLcd" avec les paramètres :
 						<br/> - Fabricant = Midas
-						<br/> - Fréquence du bus: 100kHz</td>
+						<br/> - Fréquence du bus: 100kHz
+					</td>
 				</tr>
 				<tr>
 					<td>
@@ -442,7 +451,8 @@ namespace FezPanda
 					<td>
 						<strong>I2CLcd</strong>(
 						<strong>LcdManufacturer</strong>
-						<em>ManufacturerName</em>)</td>
+						<em>ManufacturerName</em>)
+					</td>
 					<td>Instancie un objet "I2CLcd".
 						<em>ManufacturerName: </em>nom du fabricant.
 						<br/> Il correspond à l'adresse I²C du LCD :
@@ -464,7 +474,8 @@ namespace FezPanda
 						<strong>byte</strong>
 						<em>I2C_Add_7bits</em>,
 						<strong>Int16</strong>
-						<em>Frequency</em>)</td>
+						<em>Frequency</em>)
+					</td>
 					<td>Instancie un objet "I2CLcd".
 						<br>
 						<em>I2C_Add_7bits</em> est l'adresse I²C sur 7 bits attribuée à l'afficheur.
@@ -475,12 +486,13 @@ namespace FezPanda
 							<li>
 								<strong>Batron</strong> (0x3b)</li>
 						</ul>
-						<em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz]. </td>
-					<br>
-					<br>
-					<strong>Exemple</strong>
-					<br>
-					<em>I2CLcd lcd = new I2CLcd(I2CLcd.LcdManufacturer.BATRON, Freq);</em>
+						<em>Frequency</em> est à définir dans l'intervalle [100kHz,400kHz].
+						<br>
+						<br>
+						<strong>Exemple</strong>
+						<br>
+						<em>I2CLcd lcd = new I2CLcd(I2CLcd.LcdManufacturer.BATRON, Freq);</em>
+					</td>
 				</tr>
 				<tr>
 					<td>
